--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baby Resume</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <h1>Hi Barbie</h1>
