--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     
     <hr />
 
-    <h2>Education</h2>
+    <h2 class="orange-text">Education</h2>
     <ul>
         <li>I am still learning my gaga, yaya, waaaa.</li>
         <li>I may learn paa, maaaa, abcs soon.</li>
     </ul>
 
-    <h2>Work Experience</h2>
+    <h2 class="orange-text">Work Experience</h2>
     <ul>
         <li>King of pooping</li>
             <ul>
