--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <hr />
 
-    <h2>Skills</h2>
+    <h2 id="A-little-different">Skills</h2>
         <ol>
             <li>Yawning</li>
             <li>Grabbing attention</li>
