--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <br />
 
     <footer>
-        <p>© 2024 HaHaBarbGarbTarb</p>
+        <p id="A-little-different">© 2024 HaHaBarbGarbTarb</p>
     </footer>
 </body>
 </html>
